--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zenburn-emacs"]
 	path = themes/zenburn-emacs
 	url = git@github.com:bbatsov/zenburn-emacs
+[submodule "modules/ascii-table"]
+	path = modules/ascii-table
+	url = git@github.com:xchrishawk/ascii-table.git
